--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.12.0",
     "graphql": "^16.6.0",
+    "graphql-mqtt-subscriptions": "^1.2.0",
+    "graphql-subscriptions": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
