--- a/backend/package.json
+++ b/backend/package.json
@@ -27,10 +27,15 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.11.0",
     "apollo-server-express": "^3.12.0",
+    "class-transformer": "^0.5.1",
     "graphql": "^16.6.0",
     "graphql-mqtt-subscriptions": "^1.2.0",
     "graphql-subscriptions": "^2.0.0",
+    "nestjs-prisma": "^0.20.0",
+    "prisma": "^4.11.0",
+    "prisma-nestjs-graphql": "^17.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
