--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ networks:
   intnet:
     name: app
 
+
+
 services:
   mosquitto:
     container_name: broker
@@ -37,6 +39,8 @@ services:
     expose:
       - ${ENV_INFLUXDB_HTTP_PORT}
       - ${ENV_INFLUXDB_RPC_PORT}
+    volumes:
+      - ./influxdb2/data:/var/lib/influxdb2
 
   telegraf:
     image: telegraf:${ENV_TELEGRAF_IMAGE_VERSION}
@@ -52,3 +56,16 @@ services:
       - intnet
     expose:
       - ${ENV_TELEGRAF_UDP_PORT}/udp
+
+  postgres:
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB_NAME}
+    expose:
+      - 5432
+    image: postgres:13-alpine
+    networks:
+      - intnet
+    ports:
+      - ${POSTGRES_PORT}:5432
