--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - ${ENV_INFLUXDB_HTTP_PORT}
       - ${ENV_INFLUXDB_RPC_PORT}
     volumes:
-      - ./influxdb2/data:/var/lib/influxdb2
+      - ./influxdb/data:/var/lib/influxdb2
 
   telegraf:
     image: telegraf:${ENV_TELEGRAF_IMAGE_VERSION}
