--- a/telegraf/conf/telegraf.conf
+++ b/telegraf/conf/telegraf.conf
@@ -16,7 +16,7 @@
  [[inputs.mqtt_consumer]]
    servers = ["tcp://mosquitto:1883"]
    topics = [
-     "ACTUADOR/INFLUX/",
+     "ACTUADOR/INFLUX/#",
      "SENSOR/INFLUX/#"
    ]
    username="admin"
