--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,45 @@ services:
     expose:
       - ${ENV_TELEGRAF_UDP_PORT}/udp
 
+  backend: 
+    build: 
+      context: backend
+      dockerfile: Dockerfile
+    environment:
+      API_PORT: ${API_PORT} 
+      HOST_BROKER: ${HOST_BROKER}
+      PORT_BROKER: ${PORT_BROKER}
+      USER_BROKER: ${USER_BROKER}
+      PWD_BROKER: ${PWD_BROKER}
+      PROTOCOL_BROKER: ${PROTOCOL_BROKER}
+      DATABASE_URL: ${DATABASE_URL}
+      ENV_INFLUXDB_URL: ${ENV_INFLUXDB_URL}
+      ENV_INFLUXDB_ORG: ${ENV_INFLUXDB_ORG}
+      ENV_INFLUXDB_BUCKET: ${ENV_INFLUXDB_BUCKET} 
+      ENV_INFLUXDB_TOKEN: ${ENV_INFLUXDB_TOKEN}
+    depends_on:
+      - postgres
+      - mosquitto
+      - influxdb
+    networks:
+      - intnet
+    expose:
+      - ${API_PORT}
+    ports:
+      - 4000:${API_PORT}
+
+  frontend:
+    build: 
+      context: frontend
+      dockerfile: Dockerfile
+    networks:
+      - intnet
+    expose:
+      - 3000
+    ports:
+      - 3000:3000
+    
+
   postgres:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
