--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "^4.11.0",
     "apollo-server-express": "^3.12.0",
     "class-transformer": "^0.5.1",
+    "graphql": "^16.6.0",
     "graphql-mqtt-subscriptions": "^1.2.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.12.0",
@@ -64,7 +65,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.1"
   },
   "jest": {
     "moduleFileExtensions": [
