--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,8 +1,7 @@
 global
   log stdout local0 debug
   maxconn 4096
-  ssl-default-bind-options ssl-min-ver TLSv1.2
-  ssl-default-bind-ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
+
 
 resolvers docker
   nameserver embedded_dns 127.0.0.11:53
@@ -21,26 +20,19 @@ defaults
     timeout client 50s
     timeout server 50s
 
-#frontend http-in
 frontend front
   bind *:80
-  bind *:443 ssl crt usr/local/etc/haproxy/certs/gti.ind.edg-ca-full.pem
-  #http-request redirect scheme https code 301 unless { ssl_fc }
-
   default_backend www_front
-
   acl is_graphql path_beg /graphql
 
 
 
   use_backend www_api_graphql if is_graphql
-  
-
   stats enable
   stats hide-version 
   stats realm   Haproxy\ Statistics
   stats uri /haproxy?stats
-  stats auth gti:gti123
+  stats auth joao:joao123
   stats refresh 5000ms
   
 backend www_front 
